package edu.fiuba.algo3.model.Juego;

public class Mision {
  // Ladron
  // Policia
  // Item

}
